// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-html > should allow to configure html.tags 1`] = `
{
  "entry": {
    "foo": [
      "src/foo.ts",
    ],
    "main": [
      "src/main.ts",
    ],
  },
  "plugins": [
    HtmlWebpackPlugin {
      "options": {
        "base": false,
        "cache": true,
        "chunks": [
          "main",
        ],
        "chunksSortMode": "auto",
        "compile": true,
        "entryName": "main",
        "excludeChunks": [],
        "favicon": false,
        "filename": "main.html",
        "hash": false,
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": false,
        "publicPath": "auto",
        "scriptLoading": "defer",
        "showErrors": true,
        "template": "<ROOT>/packages/core/static/template.html",
        "templateContent": false,
        "templateParameters": [Function],
        "title": "Rsbuild App",
        "xhtml": false,
      },
      "userOptions": {
        "chunks": [
          "main",
        ],
        "entryName": "main",
        "filename": "main.html",
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": false,
        "scriptLoading": "defer",
        "template": "<ROOT>/packages/core/static/template.html",
        "templateParameters": [Function],
        "title": "Rsbuild App",
      },
      "version": 5,
    },
    HtmlWebpackPlugin {
      "options": {
        "base": false,
        "cache": true,
        "chunks": [
          "foo",
        ],
        "chunksSortMode": "auto",
        "compile": true,
        "entryName": "foo",
        "excludeChunks": [],
        "favicon": false,
        "filename": "foo.html",
        "hash": false,
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": false,
        "publicPath": "auto",
        "scriptLoading": "defer",
        "showErrors": true,
        "template": "<ROOT>/packages/core/static/template.html",
        "templateContent": false,
        "templateParameters": [Function],
        "title": "Rsbuild App",
        "xhtml": false,
      },
      "userOptions": {
        "chunks": [
          "foo",
        ],
        "entryName": "foo",
        "filename": "foo.html",
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": false,
        "scriptLoading": "defer",
        "template": "<ROOT>/packages/core/static/template.html",
        "templateParameters": [Function],
        "title": "Rsbuild App",
      },
      "version": 5,
    },
    HtmlBasicPlugin {
      "environment": {
        "browserslist": [
          "chrome >= 87",
          "edge >= 88",
          "firefox >= 78",
          "safari >= 14",
        ],
        "distPath": "<ROOT>/packages/core/tests/dist",
        "entry": {
          "foo": "src/foo.ts",
          "main": "src/main.ts",
        },
        "htmlPaths": {
          "foo": "foo.html",
          "main": "main.html",
        },
        "index": 0,
        "name": "web",
        "normalizedConfig": {
          "dev": {
            "assetPrefix": "/",
            "client": {
              "host": "",
              "overlay": true,
              "path": "/rsbuild-hmr",
              "port": "",
            },
            "hmr": true,
            "lazyCompilation": undefined,
            "liveReload": true,
            "writeToDisk": false,
          },
          "html": {
            "crossorigin": false,
            "inject": "head",
            "meta": {
              "charset": {
                "charset": "UTF-8",
              },
              "viewport": "width=device-width, initial-scale=1.0",
            },
            "mountId": "root",
            "outputStructure": "flat",
            "scriptLoading": "defer",
            "tags": [
              {
                "attrs": {
                  "src": "jq.js",
                },
                "tag": "script",
              },
            ],
            "title": "Rsbuild App",
          },
          "output": {
            "assetPrefix": "/",
            "charset": "ascii",
            "cssModules": {
              "auto": true,
              "exportGlobals": false,
              "exportLocalsConvention": "camelCase",
              "namedExport": false,
            },
            "dataUriLimit": {
              "font": 4096,
              "image": 4096,
              "media": 4096,
              "svg": 4096,
            },
            "distPath": {
              "css": "static/css",
              "font": "static/font",
              "html": "/",
              "image": "static/image",
              "js": "static/js",
              "media": "static/media",
              "root": "dist",
              "svg": "static/svg",
              "wasm": "static/wasm",
            },
            "emitAssets": true,
            "filename": {},
            "filenameHash": true,
            "injectStyles": false,
            "inlineScripts": false,
            "inlineStyles": false,
            "legalComments": "linked",
            "manifest": false,
            "minify": true,
            "polyfill": "usage",
            "sourceMap": {
              "css": false,
              "js": undefined,
            },
            "target": "web",
          },
          "performance": {
            "buildCache": true,
            "chunkSplit": {
              "strategy": "split-by-experience",
            },
            "printFileSize": true,
            "profile": false,
            "removeConsole": false,
            "removeMomentLocale": false,
          },
          "security": {
            "nonce": "",
            "sri": {
              "enable": false,
            },
          },
          "server": {
            "compress": true,
            "host": "0.0.0.0",
            "htmlFallback": "index",
            "open": false,
            "port": 3000,
            "printUrls": true,
            "strictPort": false,
          },
          "source": {
            "alias": {},
            "aliasStrategy": "prefer-tsconfig",
            "decorators": {
              "version": "2022-03",
            },
            "define": {},
            "entry": {
              "foo": "src/foo.ts",
              "main": "src/main.ts",
            },
            "preEntry": [],
            "tsconfigPath": "<ROOT>/packages/core/tests/tsconfig.json",
          },
          "tools": {
            "cssExtract": {
              "loaderOptions": {},
              "pluginOptions": {
                "ignoreOrder": true,
              },
            },
          },
        },
        "target": "web",
        "tsconfigPath": "<ROOT>/packages/core/tests/tsconfig.json",
      },
      "modifyTagsFn": undefined,
      "name": "HtmlBasicPlugin",
      "options": {
        "foo": {
          "tagConfig": {
            "append": true,
            "hash": false,
            "publicPath": true,
            "tags": [
              {
                "attrs": {
                  "src": "jq.js",
                },
                "tag": "script",
              },
            ],
          },
        },
        "main": {
          "tagConfig": {
            "append": true,
            "hash": false,
            "publicPath": true,
            "tags": [
              {
                "attrs": {
                  "src": "jq.js",
                },
                "tag": "script",
              },
            ],
          },
        },
      },
    },
  ],
}
`;

exports[`plugin-html > should allow to modify plugin options by tools.htmlPlugin 1`] = `
{
  "entry": {
    "index": [
      "src/index.js",
    ],
  },
  "plugins": [
    HtmlWebpackPlugin {
      "options": {
        "base": false,
        "cache": true,
        "chunks": "all",
        "chunksSortMode": "auto",
        "compile": true,
        "excludeChunks": [],
        "favicon": false,
        "filename": "index.html",
        "hash": false,
        "inject": true,
        "meta": {},
        "minify": "auto",
        "publicPath": "auto",
        "scriptLoading": "defer",
        "showErrors": true,
        "template": "auto",
        "templateContent": false,
        "templateParameters": [Function],
        "title": "Webpack App",
        "xhtml": false,
      },
      "userOptions": {
        "inject": true,
      },
      "version": 5,
    },
    HtmlBasicPlugin {
      "environment": {
        "browserslist": [
          "chrome >= 87",
          "edge >= 88",
          "firefox >= 78",
          "safari >= 14",
        ],
        "distPath": "<ROOT>/packages/core/tests/dist",
        "entry": {
          "index": "src/index.js",
        },
        "htmlPaths": {
          "index": "index.html",
        },
        "index": 0,
        "name": "web",
        "normalizedConfig": {
          "dev": {
            "assetPrefix": "/",
            "client": {
              "host": "",
              "overlay": true,
              "path": "/rsbuild-hmr",
              "port": "",
            },
            "hmr": true,
            "lazyCompilation": undefined,
            "liveReload": true,
            "writeToDisk": false,
          },
          "html": {
            "crossorigin": false,
            "inject": "head",
            "meta": {
              "charset": {
                "charset": "UTF-8",
              },
              "viewport": "width=device-width, initial-scale=1.0",
            },
            "mountId": "root",
            "outputStructure": "flat",
            "scriptLoading": "defer",
            "title": "Rsbuild App",
          },
          "output": {
            "assetPrefix": "/",
            "charset": "ascii",
            "cssModules": {
              "auto": true,
              "exportGlobals": false,
              "exportLocalsConvention": "camelCase",
              "namedExport": false,
            },
            "dataUriLimit": {
              "font": 4096,
              "image": 4096,
              "media": 4096,
              "svg": 4096,
            },
            "distPath": {
              "css": "static/css",
              "font": "static/font",
              "html": "/",
              "image": "static/image",
              "js": "static/js",
              "media": "static/media",
              "root": "dist",
              "svg": "static/svg",
              "wasm": "static/wasm",
            },
            "emitAssets": true,
            "filename": {},
            "filenameHash": true,
            "injectStyles": false,
            "inlineScripts": false,
            "inlineStyles": false,
            "legalComments": "linked",
            "manifest": false,
            "minify": true,
            "polyfill": "usage",
            "sourceMap": {
              "css": false,
              "js": undefined,
            },
            "target": "web",
          },
          "performance": {
            "buildCache": true,
            "chunkSplit": {
              "strategy": "split-by-experience",
            },
            "printFileSize": true,
            "profile": false,
            "removeConsole": false,
            "removeMomentLocale": false,
          },
          "security": {
            "nonce": "",
            "sri": {
              "enable": false,
            },
          },
          "server": {
            "compress": true,
            "host": "0.0.0.0",
            "htmlFallback": "index",
            "open": false,
            "port": 3000,
            "printUrls": true,
            "strictPort": false,
          },
          "source": {
            "alias": {},
            "aliasStrategy": "prefer-tsconfig",
            "decorators": {
              "version": "2022-03",
            },
            "define": {},
            "entry": {
              "index": "src/index.js",
            },
            "preEntry": [],
            "tsconfigPath": "<ROOT>/packages/core/tests/tsconfig.json",
          },
          "tools": {
            "cssExtract": {
              "loaderOptions": {},
              "pluginOptions": {
                "ignoreOrder": true,
              },
            },
            "htmlPlugin": [Function],
          },
        },
        "target": "web",
        "tsconfigPath": "<ROOT>/packages/core/tests/tsconfig.json",
      },
      "modifyTagsFn": undefined,
      "name": "HtmlBasicPlugin",
      "options": {
        "index": {},
      },
    },
  ],
}
`;

exports[`plugin-html > should allow to set favicon by html.favicon option 1`] = `
{
  "entry": {
    "index": [
      "src/index.js",
    ],
  },
  "plugins": [
    HtmlWebpackPlugin {
      "options": {
        "base": false,
        "cache": true,
        "chunks": [
          "index",
        ],
        "chunksSortMode": "auto",
        "compile": true,
        "entryName": "index",
        "excludeChunks": [],
        "favicon": "src/favicon.ico",
        "filename": "index.html",
        "hash": false,
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": false,
        "publicPath": "auto",
        "scriptLoading": "defer",
        "showErrors": true,
        "template": "<ROOT>/packages/core/static/template.html",
        "templateContent": false,
        "templateParameters": [Function],
        "title": "Rsbuild App",
        "xhtml": false,
      },
      "userOptions": {
        "chunks": [
          "index",
        ],
        "entryName": "index",
        "favicon": "src/favicon.ico",
        "filename": "index.html",
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": false,
        "scriptLoading": "defer",
        "template": "<ROOT>/packages/core/static/template.html",
        "templateParameters": [Function],
        "title": "Rsbuild App",
      },
      "version": 5,
    },
    HtmlBasicPlugin {
      "environment": {
        "browserslist": [
          "chrome >= 87",
          "edge >= 88",
          "firefox >= 78",
          "safari >= 14",
        ],
        "distPath": "<ROOT>/packages/core/tests/dist",
        "entry": {
          "index": "src/index.js",
        },
        "htmlPaths": {
          "index": "index.html",
        },
        "index": 0,
        "name": "web",
        "normalizedConfig": {
          "dev": {
            "assetPrefix": "/",
            "client": {
              "host": "",
              "overlay": true,
              "path": "/rsbuild-hmr",
              "port": "",
            },
            "hmr": true,
            "lazyCompilation": undefined,
            "liveReload": true,
            "writeToDisk": false,
          },
          "html": {
            "crossorigin": false,
            "favicon": "src/favicon.ico",
            "inject": "head",
            "meta": {
              "charset": {
                "charset": "UTF-8",
              },
              "viewport": "width=device-width, initial-scale=1.0",
            },
            "mountId": "root",
            "outputStructure": "flat",
            "scriptLoading": "defer",
            "title": "Rsbuild App",
          },
          "output": {
            "assetPrefix": "/",
            "charset": "ascii",
            "cssModules": {
              "auto": true,
              "exportGlobals": false,
              "exportLocalsConvention": "camelCase",
              "namedExport": false,
            },
            "dataUriLimit": {
              "font": 4096,
              "image": 4096,
              "media": 4096,
              "svg": 4096,
            },
            "distPath": {
              "css": "static/css",
              "font": "static/font",
              "html": "/",
              "image": "static/image",
              "js": "static/js",
              "media": "static/media",
              "root": "dist",
              "svg": "static/svg",
              "wasm": "static/wasm",
            },
            "emitAssets": true,
            "filename": {},
            "filenameHash": true,
            "injectStyles": false,
            "inlineScripts": false,
            "inlineStyles": false,
            "legalComments": "linked",
            "manifest": false,
            "minify": true,
            "polyfill": "usage",
            "sourceMap": {
              "css": false,
              "js": undefined,
            },
            "target": "web",
          },
          "performance": {
            "buildCache": true,
            "chunkSplit": {
              "strategy": "split-by-experience",
            },
            "printFileSize": true,
            "profile": false,
            "removeConsole": false,
            "removeMomentLocale": false,
          },
          "security": {
            "nonce": "",
            "sri": {
              "enable": false,
            },
          },
          "server": {
            "compress": true,
            "host": "0.0.0.0",
            "htmlFallback": "index",
            "open": false,
            "port": 3000,
            "printUrls": true,
            "strictPort": false,
          },
          "source": {
            "alias": {},
            "aliasStrategy": "prefer-tsconfig",
            "decorators": {
              "version": "2022-03",
            },
            "define": {},
            "entry": {
              "index": "src/index.js",
            },
            "preEntry": [],
            "tsconfigPath": "<ROOT>/packages/core/tests/tsconfig.json",
          },
          "tools": {
            "cssExtract": {
              "loaderOptions": {},
              "pluginOptions": {
                "ignoreOrder": true,
              },
            },
          },
        },
        "target": "web",
        "tsconfigPath": "<ROOT>/packages/core/tests/tsconfig.json",
      },
      "modifyTagsFn": undefined,
      "name": "HtmlBasicPlugin",
      "options": {
        "index": {},
      },
    },
  ],
}
`;

exports[`plugin-html > should allow to set inject by html.inject option 1`] = `
{
  "entry": {
    "index": [
      "src/index.js",
    ],
  },
  "plugins": [
    HtmlWebpackPlugin {
      "options": {
        "base": false,
        "cache": true,
        "chunks": [
          "index",
        ],
        "chunksSortMode": "auto",
        "compile": true,
        "entryName": "index",
        "excludeChunks": [],
        "favicon": false,
        "filename": "index.html",
        "hash": false,
        "inject": "body",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": false,
        "publicPath": "auto",
        "scriptLoading": "defer",
        "showErrors": true,
        "template": "<ROOT>/packages/core/static/template.html",
        "templateContent": false,
        "templateParameters": [Function],
        "title": "Rsbuild App",
        "xhtml": false,
      },
      "userOptions": {
        "chunks": [
          "index",
        ],
        "entryName": "index",
        "filename": "index.html",
        "inject": "body",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": false,
        "scriptLoading": "defer",
        "template": "<ROOT>/packages/core/static/template.html",
        "templateParameters": [Function],
        "title": "Rsbuild App",
      },
      "version": 5,
    },
    HtmlBasicPlugin {
      "environment": {
        "browserslist": [
          "chrome >= 87",
          "edge >= 88",
          "firefox >= 78",
          "safari >= 14",
        ],
        "distPath": "<ROOT>/packages/core/tests/dist",
        "entry": {
          "index": "src/index.js",
        },
        "htmlPaths": {
          "index": "index.html",
        },
        "index": 0,
        "name": "web",
        "normalizedConfig": {
          "dev": {
            "assetPrefix": "/",
            "client": {
              "host": "",
              "overlay": true,
              "path": "/rsbuild-hmr",
              "port": "",
            },
            "hmr": true,
            "lazyCompilation": undefined,
            "liveReload": true,
            "writeToDisk": false,
          },
          "html": {
            "crossorigin": false,
            "inject": "body",
            "meta": {
              "charset": {
                "charset": "UTF-8",
              },
              "viewport": "width=device-width, initial-scale=1.0",
            },
            "mountId": "root",
            "outputStructure": "flat",
            "scriptLoading": "defer",
            "title": "Rsbuild App",
          },
          "output": {
            "assetPrefix": "/",
            "charset": "ascii",
            "cssModules": {
              "auto": true,
              "exportGlobals": false,
              "exportLocalsConvention": "camelCase",
              "namedExport": false,
            },
            "dataUriLimit": {
              "font": 4096,
              "image": 4096,
              "media": 4096,
              "svg": 4096,
            },
            "distPath": {
              "css": "static/css",
              "font": "static/font",
              "html": "/",
              "image": "static/image",
              "js": "static/js",
              "media": "static/media",
              "root": "dist",
              "svg": "static/svg",
              "wasm": "static/wasm",
            },
            "emitAssets": true,
            "filename": {},
            "filenameHash": true,
            "injectStyles": false,
            "inlineScripts": false,
            "inlineStyles": false,
            "legalComments": "linked",
            "manifest": false,
            "minify": true,
            "polyfill": "usage",
            "sourceMap": {
              "css": false,
              "js": undefined,
            },
            "target": "web",
          },
          "performance": {
            "buildCache": true,
            "chunkSplit": {
              "strategy": "split-by-experience",
            },
            "printFileSize": true,
            "profile": false,
            "removeConsole": false,
            "removeMomentLocale": false,
          },
          "security": {
            "nonce": "",
            "sri": {
              "enable": false,
            },
          },
          "server": {
            "compress": true,
            "host": "0.0.0.0",
            "htmlFallback": "index",
            "open": false,
            "port": 3000,
            "printUrls": true,
            "strictPort": false,
          },
          "source": {
            "alias": {},
            "aliasStrategy": "prefer-tsconfig",
            "decorators": {
              "version": "2022-03",
            },
            "define": {},
            "entry": {
              "index": "src/index.js",
            },
            "preEntry": [],
            "tsconfigPath": "<ROOT>/packages/core/tests/tsconfig.json",
          },
          "tools": {
            "cssExtract": {
              "loaderOptions": {},
              "pluginOptions": {
                "ignoreOrder": true,
              },
            },
          },
        },
        "target": "web",
        "tsconfigPath": "<ROOT>/packages/core/tests/tsconfig.json",
      },
      "modifyTagsFn": undefined,
      "name": "HtmlBasicPlugin",
      "options": {
        "index": {},
      },
    },
  ],
}
`;

exports[`plugin-html > should enable minify in production 1`] = `
{
  "entry": {
    "index": [
      "src/index.js",
    ],
  },
  "plugins": [
    HtmlWebpackPlugin {
      "options": {
        "base": false,
        "cache": true,
        "chunks": [
          "index",
        ],
        "chunksSortMode": "auto",
        "compile": true,
        "entryName": "index",
        "excludeChunks": [],
        "favicon": false,
        "filename": "index.html",
        "hash": false,
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": {
          "collapseWhitespace": true,
          "keepClosingSlash": true,
          "minifyCSS": true,
          "minifyJS": {
            "format": {
              "ascii_only": true,
            },
            "mangle": {
              "safari10": true,
            },
          },
          "minifyURLs": true,
          "removeComments": false,
          "removeEmptyAttributes": true,
          "removeRedundantAttributes": true,
          "removeScriptTypeAttributes": true,
          "removeStyleLinkTypeAttributes": true,
          "useShortDoctype": true,
        },
        "publicPath": "auto",
        "scriptLoading": "defer",
        "showErrors": true,
        "template": "<ROOT>/packages/core/static/template.html",
        "templateContent": false,
        "templateParameters": [Function],
        "title": "Rsbuild App",
        "xhtml": false,
      },
      "userOptions": {
        "chunks": [
          "index",
        ],
        "entryName": "index",
        "filename": "index.html",
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": {
          "collapseWhitespace": true,
          "keepClosingSlash": true,
          "minifyCSS": true,
          "minifyJS": {
            "format": {
              "ascii_only": true,
            },
            "mangle": {
              "safari10": true,
            },
          },
          "minifyURLs": true,
          "removeComments": false,
          "removeEmptyAttributes": true,
          "removeRedundantAttributes": true,
          "removeScriptTypeAttributes": true,
          "removeStyleLinkTypeAttributes": true,
          "useShortDoctype": true,
        },
        "scriptLoading": "defer",
        "template": "<ROOT>/packages/core/static/template.html",
        "templateParameters": [Function],
        "title": "Rsbuild App",
      },
      "version": 5,
    },
    HtmlBasicPlugin {
      "environment": {
        "browserslist": [
          "chrome >= 87",
          "edge >= 88",
          "firefox >= 78",
          "safari >= 14",
        ],
        "distPath": "<ROOT>/packages/core/tests/dist",
        "entry": {
          "index": "src/index.js",
        },
        "htmlPaths": {
          "index": "index.html",
        },
        "index": 0,
        "name": "web",
        "normalizedConfig": {
          "dev": {
            "assetPrefix": "/",
            "client": {
              "host": "",
              "overlay": true,
              "path": "/rsbuild-hmr",
              "port": "",
            },
            "hmr": true,
            "lazyCompilation": undefined,
            "liveReload": true,
            "writeToDisk": false,
          },
          "html": {
            "crossorigin": false,
            "inject": "head",
            "meta": {
              "charset": {
                "charset": "UTF-8",
              },
              "viewport": "width=device-width, initial-scale=1.0",
            },
            "mountId": "root",
            "outputStructure": "flat",
            "scriptLoading": "defer",
            "title": "Rsbuild App",
          },
          "output": {
            "assetPrefix": "/",
            "charset": "ascii",
            "cssModules": {
              "auto": true,
              "exportGlobals": false,
              "exportLocalsConvention": "camelCase",
              "namedExport": false,
            },
            "dataUriLimit": {
              "font": 4096,
              "image": 4096,
              "media": 4096,
              "svg": 4096,
            },
            "distPath": {
              "css": "static/css",
              "font": "static/font",
              "html": "/",
              "image": "static/image",
              "js": "static/js",
              "media": "static/media",
              "root": "dist",
              "svg": "static/svg",
              "wasm": "static/wasm",
            },
            "emitAssets": true,
            "filename": {},
            "filenameHash": true,
            "injectStyles": false,
            "inlineScripts": false,
            "inlineStyles": false,
            "legalComments": "linked",
            "manifest": false,
            "minify": true,
            "polyfill": "usage",
            "sourceMap": {
              "css": false,
              "js": undefined,
            },
            "target": "web",
          },
          "performance": {
            "buildCache": true,
            "chunkSplit": {
              "strategy": "split-by-experience",
            },
            "printFileSize": true,
            "profile": false,
            "removeConsole": false,
            "removeMomentLocale": false,
          },
          "security": {
            "nonce": "",
            "sri": {
              "enable": false,
            },
          },
          "server": {
            "compress": true,
            "host": "0.0.0.0",
            "htmlFallback": "index",
            "open": false,
            "port": 3000,
            "printUrls": true,
            "strictPort": false,
          },
          "source": {
            "alias": {},
            "aliasStrategy": "prefer-tsconfig",
            "decorators": {
              "version": "2022-03",
            },
            "define": {},
            "entry": {
              "index": "src/index.js",
            },
            "preEntry": [],
            "tsconfigPath": "<ROOT>/packages/core/tests/tsconfig.json",
          },
          "tools": {
            "cssExtract": {
              "loaderOptions": {},
              "pluginOptions": {
                "ignoreOrder": true,
              },
            },
          },
        },
        "target": "web",
        "tsconfigPath": "<ROOT>/packages/core/tests/tsconfig.json",
      },
      "modifyTagsFn": undefined,
      "name": "HtmlBasicPlugin",
      "options": {
        "index": {},
      },
    },
  ],
}
`;

exports[`plugin-html > should register html plugin correctly 1`] = `
{
  "entry": {
    "index": [
      "src/index.js",
    ],
  },
  "plugins": [
    HtmlWebpackPlugin {
      "options": {
        "base": false,
        "cache": true,
        "chunks": [
          "index",
        ],
        "chunksSortMode": "auto",
        "compile": true,
        "entryName": "index",
        "excludeChunks": [],
        "favicon": false,
        "filename": "index.html",
        "hash": false,
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": false,
        "publicPath": "auto",
        "scriptLoading": "defer",
        "showErrors": true,
        "template": "<ROOT>/packages/core/static/template.html",
        "templateContent": false,
        "templateParameters": [Function],
        "title": "Rsbuild App",
        "xhtml": false,
      },
      "userOptions": {
        "chunks": [
          "index",
        ],
        "entryName": "index",
        "filename": "index.html",
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": false,
        "scriptLoading": "defer",
        "template": "<ROOT>/packages/core/static/template.html",
        "templateParameters": [Function],
        "title": "Rsbuild App",
      },
      "version": 5,
    },
    HtmlBasicPlugin {
      "environment": {
        "browserslist": [
          "chrome >= 87",
          "edge >= 88",
          "firefox >= 78",
          "safari >= 14",
        ],
        "distPath": "<ROOT>/packages/core/tests/dist",
        "entry": {
          "index": "src/index.js",
        },
        "htmlPaths": {
          "index": "index.html",
        },
        "index": 0,
        "name": "web",
        "normalizedConfig": {
          "dev": {
            "assetPrefix": "/",
            "client": {
              "host": "",
              "overlay": true,
              "path": "/rsbuild-hmr",
              "port": "",
            },
            "hmr": true,
            "lazyCompilation": undefined,
            "liveReload": true,
            "writeToDisk": false,
          },
          "html": {
            "crossorigin": false,
            "inject": "head",
            "meta": {
              "charset": {
                "charset": "UTF-8",
              },
              "viewport": "width=device-width, initial-scale=1.0",
            },
            "mountId": "root",
            "outputStructure": "flat",
            "scriptLoading": "defer",
            "title": "Rsbuild App",
          },
          "output": {
            "assetPrefix": "/",
            "charset": "ascii",
            "cssModules": {
              "auto": true,
              "exportGlobals": false,
              "exportLocalsConvention": "camelCase",
              "namedExport": false,
            },
            "dataUriLimit": {
              "font": 4096,
              "image": 4096,
              "media": 4096,
              "svg": 4096,
            },
            "distPath": {
              "css": "static/css",
              "font": "static/font",
              "html": "/",
              "image": "static/image",
              "js": "static/js",
              "media": "static/media",
              "root": "dist",
              "svg": "static/svg",
              "wasm": "static/wasm",
            },
            "emitAssets": true,
            "filename": {},
            "filenameHash": true,
            "injectStyles": false,
            "inlineScripts": false,
            "inlineStyles": false,
            "legalComments": "linked",
            "manifest": false,
            "minify": true,
            "polyfill": "usage",
            "sourceMap": {
              "css": false,
              "js": undefined,
            },
            "target": "web",
          },
          "performance": {
            "buildCache": true,
            "chunkSplit": {
              "strategy": "split-by-experience",
            },
            "printFileSize": true,
            "profile": false,
            "removeConsole": false,
            "removeMomentLocale": false,
          },
          "security": {
            "nonce": "",
            "sri": {
              "enable": false,
            },
          },
          "server": {
            "compress": true,
            "host": "0.0.0.0",
            "htmlFallback": "index",
            "open": false,
            "port": 3000,
            "printUrls": true,
            "strictPort": false,
          },
          "source": {
            "alias": {},
            "aliasStrategy": "prefer-tsconfig",
            "decorators": {
              "version": "2022-03",
            },
            "define": {},
            "entry": {
              "index": "src/index.js",
            },
            "preEntry": [],
            "tsconfigPath": "<ROOT>/packages/core/tests/tsconfig.json",
          },
          "tools": {
            "cssExtract": {
              "loaderOptions": {},
              "pluginOptions": {
                "ignoreOrder": true,
              },
            },
          },
        },
        "target": "web",
        "tsconfigPath": "<ROOT>/packages/core/tests/tsconfig.json",
      },
      "modifyTagsFn": undefined,
      "name": "HtmlBasicPlugin",
      "options": {
        "index": {},
      },
    },
  ],
}
`;

exports[`plugin-html > should stop injecting <script> if inject is '() => false' 1`] = `
{
  "entry": {
    "index": [
      "src/index.js",
    ],
  },
  "plugins": [
    HtmlWebpackPlugin {
      "options": {
        "base": false,
        "cache": true,
        "chunks": [
          "index",
        ],
        "chunksSortMode": "auto",
        "compile": true,
        "entryName": "index",
        "excludeChunks": [],
        "favicon": false,
        "filename": "index.html",
        "hash": false,
        "inject": false,
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": false,
        "publicPath": "auto",
        "scriptLoading": "defer",
        "showErrors": true,
        "template": "<ROOT>/packages/core/static/template.html",
        "templateContent": false,
        "templateParameters": [Function],
        "title": "Rsbuild App",
        "xhtml": false,
      },
      "userOptions": {
        "chunks": [
          "index",
        ],
        "entryName": "index",
        "filename": "index.html",
        "inject": false,
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": false,
        "scriptLoading": "defer",
        "template": "<ROOT>/packages/core/static/template.html",
        "templateParameters": [Function],
        "title": "Rsbuild App",
      },
      "version": 5,
    },
    HtmlBasicPlugin {
      "environment": {
        "browserslist": [
          "chrome >= 87",
          "edge >= 88",
          "firefox >= 78",
          "safari >= 14",
        ],
        "distPath": "<ROOT>/packages/core/tests/dist",
        "entry": {
          "index": "src/index.js",
        },
        "htmlPaths": {
          "index": "index.html",
        },
        "index": 0,
        "name": "web",
        "normalizedConfig": {
          "dev": {
            "assetPrefix": "/",
            "client": {
              "host": "",
              "overlay": true,
              "path": "/rsbuild-hmr",
              "port": "",
            },
            "hmr": true,
            "lazyCompilation": undefined,
            "liveReload": true,
            "writeToDisk": false,
          },
          "html": {
            "crossorigin": false,
            "inject": [
              "head",
              "head",
              [Function],
            ],
            "meta": {
              "charset": {
                "charset": "UTF-8",
              },
              "viewport": "width=device-width, initial-scale=1.0",
            },
            "mountId": "root",
            "outputStructure": "flat",
            "scriptLoading": "defer",
            "title": "Rsbuild App",
          },
          "output": {
            "assetPrefix": "/",
            "charset": "ascii",
            "cssModules": {
              "auto": true,
              "exportGlobals": false,
              "exportLocalsConvention": "camelCase",
              "namedExport": false,
            },
            "dataUriLimit": {
              "font": 4096,
              "image": 4096,
              "media": 4096,
              "svg": 4096,
            },
            "distPath": {
              "css": "static/css",
              "font": "static/font",
              "html": "/",
              "image": "static/image",
              "js": "static/js",
              "media": "static/media",
              "root": "dist",
              "svg": "static/svg",
              "wasm": "static/wasm",
            },
            "emitAssets": true,
            "filename": {},
            "filenameHash": true,
            "injectStyles": false,
            "inlineScripts": false,
            "inlineStyles": false,
            "legalComments": "linked",
            "manifest": false,
            "minify": true,
            "polyfill": "usage",
            "sourceMap": {
              "css": false,
              "js": undefined,
            },
            "target": "web",
          },
          "performance": {
            "buildCache": true,
            "chunkSplit": {
              "strategy": "split-by-experience",
            },
            "printFileSize": true,
            "profile": false,
            "removeConsole": false,
            "removeMomentLocale": false,
          },
          "security": {
            "nonce": "",
            "sri": {
              "enable": false,
            },
          },
          "server": {
            "compress": true,
            "host": "0.0.0.0",
            "htmlFallback": "index",
            "open": false,
            "port": 3000,
            "printUrls": true,
            "strictPort": false,
          },
          "source": {
            "alias": {},
            "aliasStrategy": "prefer-tsconfig",
            "decorators": {
              "version": "2022-03",
            },
            "define": {},
            "entry": {
              "index": "src/index.js",
            },
            "preEntry": [],
            "tsconfigPath": "<ROOT>/packages/core/tests/tsconfig.json",
          },
          "tools": {
            "cssExtract": {
              "loaderOptions": {},
              "pluginOptions": {
                "ignoreOrder": true,
              },
            },
          },
        },
        "target": "web",
        "tsconfigPath": "<ROOT>/packages/core/tests/tsconfig.json",
      },
      "modifyTagsFn": undefined,
      "name": "HtmlBasicPlugin",
      "options": {
        "index": {},
      },
    },
  ],
}
`;

exports[`plugin-html > should stop injecting <script> if inject is 'false' 1`] = `
{
  "entry": {
    "index": [
      "src/index.js",
    ],
  },
  "plugins": [
    HtmlWebpackPlugin {
      "options": {
        "base": false,
        "cache": true,
        "chunks": [
          "index",
        ],
        "chunksSortMode": "auto",
        "compile": true,
        "entryName": "index",
        "excludeChunks": [],
        "favicon": false,
        "filename": "index.html",
        "hash": false,
        "inject": false,
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": false,
        "publicPath": "auto",
        "scriptLoading": "defer",
        "showErrors": true,
        "template": "<ROOT>/packages/core/static/template.html",
        "templateContent": false,
        "templateParameters": [Function],
        "title": "Rsbuild App",
        "xhtml": false,
      },
      "userOptions": {
        "chunks": [
          "index",
        ],
        "entryName": "index",
        "filename": "index.html",
        "inject": false,
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": false,
        "scriptLoading": "defer",
        "template": "<ROOT>/packages/core/static/template.html",
        "templateParameters": [Function],
        "title": "Rsbuild App",
      },
      "version": 5,
    },
    HtmlBasicPlugin {
      "environment": {
        "browserslist": [
          "chrome >= 87",
          "edge >= 88",
          "firefox >= 78",
          "safari >= 14",
        ],
        "distPath": "<ROOT>/packages/core/tests/dist",
        "entry": {
          "index": "src/index.js",
        },
        "htmlPaths": {
          "index": "index.html",
        },
        "index": 0,
        "name": "web",
        "normalizedConfig": {
          "dev": {
            "assetPrefix": "/",
            "client": {
              "host": "",
              "overlay": true,
              "path": "/rsbuild-hmr",
              "port": "",
            },
            "hmr": true,
            "lazyCompilation": undefined,
            "liveReload": true,
            "writeToDisk": false,
          },
          "html": {
            "crossorigin": false,
            "inject": false,
            "meta": {
              "charset": {
                "charset": "UTF-8",
              },
              "viewport": "width=device-width, initial-scale=1.0",
            },
            "mountId": "root",
            "outputStructure": "flat",
            "scriptLoading": "defer",
            "title": "Rsbuild App",
          },
          "output": {
            "assetPrefix": "/",
            "charset": "ascii",
            "cssModules": {
              "auto": true,
              "exportGlobals": false,
              "exportLocalsConvention": "camelCase",
              "namedExport": false,
            },
            "dataUriLimit": {
              "font": 4096,
              "image": 4096,
              "media": 4096,
              "svg": 4096,
            },
            "distPath": {
              "css": "static/css",
              "font": "static/font",
              "html": "/",
              "image": "static/image",
              "js": "static/js",
              "media": "static/media",
              "root": "dist",
              "svg": "static/svg",
              "wasm": "static/wasm",
            },
            "emitAssets": true,
            "filename": {},
            "filenameHash": true,
            "injectStyles": false,
            "inlineScripts": false,
            "inlineStyles": false,
            "legalComments": "linked",
            "manifest": false,
            "minify": true,
            "polyfill": "usage",
            "sourceMap": {
              "css": false,
              "js": undefined,
            },
            "target": "web",
          },
          "performance": {
            "buildCache": true,
            "chunkSplit": {
              "strategy": "split-by-experience",
            },
            "printFileSize": true,
            "profile": false,
            "removeConsole": false,
            "removeMomentLocale": false,
          },
          "security": {
            "nonce": "",
            "sri": {
              "enable": false,
            },
          },
          "server": {
            "compress": true,
            "host": "0.0.0.0",
            "htmlFallback": "index",
            "open": false,
            "port": 3000,
            "printUrls": true,
            "strictPort": false,
          },
          "source": {
            "alias": {},
            "aliasStrategy": "prefer-tsconfig",
            "decorators": {
              "version": "2022-03",
            },
            "define": {},
            "entry": {
              "index": "src/index.js",
            },
            "preEntry": [],
            "tsconfigPath": "<ROOT>/packages/core/tests/tsconfig.json",
          },
          "tools": {
            "cssExtract": {
              "loaderOptions": {},
              "pluginOptions": {
                "ignoreOrder": true,
              },
            },
          },
        },
        "target": "web",
        "tsconfigPath": "<ROOT>/packages/core/tests/tsconfig.json",
      },
      "modifyTagsFn": undefined,
      "name": "HtmlBasicPlugin",
      "options": {
        "index": {},
      },
    },
  ],
}
`;

exports[`plugin-html > should support environment html config 1`] = `
[
  {
    "entry": {
      "main": [
        "src/main.ts",
      ],
    },
    "plugins": [
      HtmlWebpackPlugin {
        "options": {
          "base": false,
          "cache": true,
          "chunks": [
            "main",
          ],
          "chunksSortMode": "auto",
          "compile": true,
          "entryName": "main",
          "excludeChunks": [],
          "favicon": false,
          "filename": "web/main.html",
          "hash": false,
          "inject": "head",
          "meta": {
            "charset": {
              "charset": "UTF-8",
            },
            "viewport": "width=device-width, initial-scale=1.0",
          },
          "minify": false,
          "publicPath": "auto",
          "scriptLoading": "defer",
          "showErrors": true,
          "template": "<ROOT>/packages/core/static/template.html",
          "templateContent": false,
          "templateParameters": [Function],
          "title": "web",
          "xhtml": false,
        },
        "userOptions": {
          "chunks": [
            "main",
          ],
          "entryName": "main",
          "filename": "web/main.html",
          "inject": "head",
          "meta": {
            "charset": {
              "charset": "UTF-8",
            },
            "viewport": "width=device-width, initial-scale=1.0",
          },
          "minify": false,
          "scriptLoading": "defer",
          "template": "<ROOT>/packages/core/static/template.html",
          "templateParameters": [Function],
          "title": "web",
        },
        "version": 5,
      },
      HtmlBasicPlugin {
        "environment": {
          "browserslist": [
            "chrome >= 87",
            "edge >= 88",
            "firefox >= 78",
            "safari >= 14",
          ],
          "distPath": "<ROOT>/packages/core/tests/dist",
          "entry": {
            "main": "src/main.ts",
          },
          "htmlPaths": {
            "main": "web/main.html",
          },
          "index": 0,
          "name": "web",
          "normalizedConfig": {
            "dev": {
              "assetPrefix": "/",
              "client": {
                "host": "",
                "overlay": true,
                "path": "/rsbuild-hmr",
                "port": "",
              },
              "hmr": true,
              "lazyCompilation": undefined,
              "liveReload": true,
              "writeToDisk": false,
            },
            "html": {
              "crossorigin": false,
              "inject": "head",
              "meta": {
                "charset": {
                  "charset": "UTF-8",
                },
                "viewport": "width=device-width, initial-scale=1.0",
              },
              "mountId": "app",
              "outputStructure": "flat",
              "scriptLoading": "defer",
              "title": "web",
            },
            "output": {
              "assetPrefix": "/",
              "charset": "ascii",
              "cssModules": {
                "auto": true,
                "exportGlobals": false,
                "exportLocalsConvention": "camelCase",
                "namedExport": false,
              },
              "dataUriLimit": {
                "font": 4096,
                "image": 4096,
                "media": 4096,
                "svg": 4096,
              },
              "distPath": {
                "css": "static/css",
                "font": "static/font",
                "html": "web",
                "image": "static/image",
                "js": "static/js",
                "media": "static/media",
                "root": "dist",
                "svg": "static/svg",
                "wasm": "static/wasm",
              },
              "emitAssets": true,
              "filename": {},
              "filenameHash": true,
              "injectStyles": false,
              "inlineScripts": false,
              "inlineStyles": false,
              "legalComments": "linked",
              "manifest": false,
              "minify": true,
              "polyfill": "usage",
              "sourceMap": {
                "css": false,
                "js": undefined,
              },
              "target": "web",
            },
            "performance": {
              "buildCache": true,
              "chunkSplit": {
                "strategy": "split-by-experience",
              },
              "printFileSize": true,
              "profile": false,
              "removeConsole": false,
              "removeMomentLocale": false,
            },
            "security": {
              "nonce": "",
              "sri": {
                "enable": false,
              },
            },
            "server": {
              "compress": true,
              "host": "0.0.0.0",
              "htmlFallback": "index",
              "open": false,
              "port": 3000,
              "printUrls": true,
              "strictPort": false,
            },
            "source": {
              "alias": {},
              "aliasStrategy": "prefer-tsconfig",
              "decorators": {
                "version": "2022-03",
              },
              "define": {},
              "entry": {
                "main": "src/main.ts",
              },
              "preEntry": [],
              "tsconfigPath": "<ROOT>/packages/core/tests/tsconfig.json",
            },
            "tools": {
              "cssExtract": {
                "loaderOptions": {},
                "pluginOptions": {
                  "ignoreOrder": true,
                },
              },
            },
          },
          "target": "web",
          "tsconfigPath": "<ROOT>/packages/core/tests/tsconfig.json",
        },
        "modifyTagsFn": undefined,
        "name": "HtmlBasicPlugin",
        "options": {
          "main": {},
        },
      },
    ],
  },
  {
    "entry": {
      "index": [
        "src/main1.ts",
      ],
    },
    "plugins": [
      HtmlWebpackPlugin {
        "options": {
          "base": false,
          "cache": true,
          "chunks": [
            "index",
          ],
          "chunksSortMode": "auto",
          "compile": true,
          "entryName": "index",
          "excludeChunks": [],
          "favicon": false,
          "filename": "index.html",
          "hash": false,
          "inject": "head",
          "meta": {
            "charset": {
              "charset": "UTF-8",
            },
            "viewport": "width=device-width, initial-scale=1.0",
          },
          "minify": false,
          "publicPath": "auto",
          "scriptLoading": "defer",
          "showErrors": true,
          "template": "<ROOT>/packages/core/static/template.html",
          "templateContent": false,
          "templateParameters": [Function],
          "title": "web1",
          "xhtml": false,
        },
        "userOptions": {
          "chunks": [
            "index",
          ],
          "entryName": "index",
          "filename": "index.html",
          "inject": "head",
          "meta": {
            "charset": {
              "charset": "UTF-8",
            },
            "viewport": "width=device-width, initial-scale=1.0",
          },
          "minify": false,
          "scriptLoading": "defer",
          "template": "<ROOT>/packages/core/static/template.html",
          "templateParameters": [Function],
          "title": "web1",
        },
        "version": 5,
      },
      HtmlBasicPlugin {
        "environment": {
          "browserslist": [
            "chrome >= 87",
            "edge >= 88",
            "firefox >= 78",
            "safari >= 14",
          ],
          "distPath": "<ROOT>/packages/core/tests/dist",
          "entry": {
            "index": "src/main1.ts",
          },
          "htmlPaths": {
            "index": "index.html",
          },
          "index": 1,
          "name": "web1",
          "normalizedConfig": {
            "dev": {
              "assetPrefix": "/",
              "client": {
                "host": "",
                "overlay": true,
                "path": "/rsbuild-hmr",
                "port": "",
              },
              "hmr": true,
              "lazyCompilation": undefined,
              "liveReload": true,
              "writeToDisk": false,
            },
            "html": {
              "crossorigin": false,
              "inject": "head",
              "meta": {
                "charset": {
                  "charset": "UTF-8",
                },
                "viewport": "width=device-width, initial-scale=1.0",
              },
              "mountId": "app1",
              "outputStructure": "flat",
              "scriptLoading": "defer",
              "title": "web1",
            },
            "output": {
              "assetPrefix": "/",
              "charset": "ascii",
              "cssModules": {
                "auto": true,
                "exportGlobals": false,
                "exportLocalsConvention": "camelCase",
                "namedExport": false,
              },
              "dataUriLimit": {
                "font": 4096,
                "image": 4096,
                "media": 4096,
                "svg": 4096,
              },
              "distPath": {
                "css": "static/css",
                "font": "static/font",
                "html": "/",
                "image": "static/image",
                "js": "static/js",
                "media": "static/media",
                "root": "dist",
                "svg": "static/svg",
                "wasm": "static/wasm",
              },
              "emitAssets": true,
              "filename": {},
              "filenameHash": true,
              "injectStyles": false,
              "inlineScripts": false,
              "inlineStyles": false,
              "legalComments": "linked",
              "manifest": false,
              "minify": true,
              "polyfill": "usage",
              "sourceMap": {
                "css": false,
                "js": undefined,
              },
              "target": "web",
            },
            "performance": {
              "buildCache": true,
              "chunkSplit": {
                "strategy": "split-by-experience",
              },
              "printFileSize": true,
              "profile": false,
              "removeConsole": false,
              "removeMomentLocale": false,
            },
            "security": {
              "nonce": "",
              "sri": {
                "enable": false,
              },
            },
            "server": {
              "compress": true,
              "host": "0.0.0.0",
              "htmlFallback": "index",
              "open": false,
              "port": 3000,
              "printUrls": true,
              "strictPort": false,
            },
            "source": {
              "alias": {},
              "aliasStrategy": "prefer-tsconfig",
              "decorators": {
                "version": "2022-03",
              },
              "define": {},
              "entry": {
                "index": "src/main1.ts",
              },
              "preEntry": [],
              "tsconfigPath": "<ROOT>/packages/core/tests/tsconfig.json",
            },
            "tools": {
              "cssExtract": {
                "loaderOptions": {},
                "pluginOptions": {
                  "ignoreOrder": true,
                },
              },
            },
          },
          "target": "web",
          "tsconfigPath": "<ROOT>/packages/core/tests/tsconfig.json",
        },
        "modifyTagsFn": undefined,
        "name": "HtmlBasicPlugin",
        "options": {
          "index": {},
        },
      },
    ],
  },
]
`;

exports[`plugin-html > should support multi entry 1`] = `
{
  "entry": {
    "foo": [
      "src/foo.ts",
    ],
    "main": [
      "src/main.ts",
    ],
  },
  "plugins": [
    HtmlWebpackPlugin {
      "options": {
        "base": false,
        "cache": true,
        "chunks": [
          "main",
        ],
        "chunksSortMode": "auto",
        "compile": true,
        "entryName": "main",
        "excludeChunks": [],
        "favicon": false,
        "filename": "main.html",
        "hash": false,
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": false,
        "publicPath": "auto",
        "scriptLoading": "defer",
        "showErrors": true,
        "template": "<ROOT>/packages/core/static/template.html",
        "templateContent": false,
        "templateParameters": [Function],
        "title": "Rsbuild App",
        "xhtml": false,
      },
      "userOptions": {
        "chunks": [
          "main",
        ],
        "entryName": "main",
        "filename": "main.html",
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": false,
        "scriptLoading": "defer",
        "template": "<ROOT>/packages/core/static/template.html",
        "templateParameters": [Function],
        "title": "Rsbuild App",
      },
      "version": 5,
    },
    HtmlWebpackPlugin {
      "options": {
        "base": false,
        "cache": true,
        "chunks": [
          "foo",
        ],
        "chunksSortMode": "auto",
        "compile": true,
        "entryName": "foo",
        "excludeChunks": [],
        "favicon": false,
        "filename": "foo.html",
        "hash": false,
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": false,
        "publicPath": "auto",
        "scriptLoading": "defer",
        "showErrors": true,
        "template": "<ROOT>/packages/core/static/template.html",
        "templateContent": false,
        "templateParameters": [Function],
        "title": "Rsbuild App",
        "xhtml": false,
      },
      "userOptions": {
        "chunks": [
          "foo",
        ],
        "entryName": "foo",
        "filename": "foo.html",
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": false,
        "scriptLoading": "defer",
        "template": "<ROOT>/packages/core/static/template.html",
        "templateParameters": [Function],
        "title": "Rsbuild App",
      },
      "version": 5,
    },
    HtmlBasicPlugin {
      "environment": {
        "browserslist": [
          "chrome >= 87",
          "edge >= 88",
          "firefox >= 78",
          "safari >= 14",
        ],
        "distPath": "<ROOT>/packages/core/tests/dist",
        "entry": {
          "foo": "src/foo.ts",
          "main": "src/main.ts",
        },
        "htmlPaths": {
          "foo": "foo.html",
          "main": "main.html",
        },
        "index": 0,
        "name": "web",
        "normalizedConfig": {
          "dev": {
            "assetPrefix": "/",
            "client": {
              "host": "",
              "overlay": true,
              "path": "/rsbuild-hmr",
              "port": "",
            },
            "hmr": true,
            "lazyCompilation": undefined,
            "liveReload": true,
            "writeToDisk": false,
          },
          "html": {
            "crossorigin": false,
            "inject": "head",
            "meta": {
              "charset": {
                "charset": "UTF-8",
              },
              "viewport": "width=device-width, initial-scale=1.0",
            },
            "mountId": "root",
            "outputStructure": "flat",
            "scriptLoading": "defer",
            "template": [Function],
            "title": "Rsbuild App",
          },
          "output": {
            "assetPrefix": "/",
            "charset": "ascii",
            "cssModules": {
              "auto": true,
              "exportGlobals": false,
              "exportLocalsConvention": "camelCase",
              "namedExport": false,
            },
            "dataUriLimit": {
              "font": 4096,
              "image": 4096,
              "media": 4096,
              "svg": 4096,
            },
            "distPath": {
              "css": "static/css",
              "font": "static/font",
              "html": "/",
              "image": "static/image",
              "js": "static/js",
              "media": "static/media",
              "root": "dist",
              "svg": "static/svg",
              "wasm": "static/wasm",
            },
            "emitAssets": true,
            "filename": {},
            "filenameHash": true,
            "injectStyles": false,
            "inlineScripts": false,
            "inlineStyles": false,
            "legalComments": "linked",
            "manifest": false,
            "minify": true,
            "polyfill": "usage",
            "sourceMap": {
              "css": false,
              "js": undefined,
            },
            "target": "web",
          },
          "performance": {
            "buildCache": true,
            "chunkSplit": {
              "strategy": "split-by-experience",
            },
            "printFileSize": true,
            "profile": false,
            "removeConsole": false,
            "removeMomentLocale": false,
          },
          "security": {
            "nonce": "",
            "sri": {
              "enable": false,
            },
          },
          "server": {
            "compress": true,
            "host": "0.0.0.0",
            "htmlFallback": "index",
            "open": false,
            "port": 3000,
            "printUrls": true,
            "strictPort": false,
          },
          "source": {
            "alias": {},
            "aliasStrategy": "prefer-tsconfig",
            "decorators": {
              "version": "2022-03",
            },
            "define": {},
            "entry": {
              "foo": "src/foo.ts",
              "main": "src/main.ts",
            },
            "preEntry": [],
            "tsconfigPath": "<ROOT>/packages/core/tests/tsconfig.json",
          },
          "tools": {
            "cssExtract": {
              "loaderOptions": {},
              "pluginOptions": {
                "ignoreOrder": true,
              },
            },
          },
        },
        "target": "web",
        "tsconfigPath": "<ROOT>/packages/core/tests/tsconfig.json",
      },
      "modifyTagsFn": undefined,
      "name": "HtmlBasicPlugin",
      "options": {
        "foo": {},
        "main": {},
      },
    },
  ],
}
`;
